--- a/config.js.template
+++ b/config.js.template
@@ -1,3 +1,4 @@
 const host = "https://demo.wp-api.org";
+const postParamsToBeDeleted = [];
 
-module.exports = { host };
+module.exports = { host, postParamsToBeDeleted };
