--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "html-entities": "^1.3.1",
     "lodash": "^4.17.15",
     "request": "^2.88.2"
   },
