--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "html-entities": "^1.3.1",
     "lodash": "^4.17.15",
+    "node-html-parser": "^1.2.20",
     "request": "^2.88.2"
   },
   "devDependencies": {
