--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "html-entities": "^1.3.1",
-    "lodash": "^4.17.15",
-    "node-html-parser": "^1.2.20",
+    "lodash": "^4.17.19",
+    "parse5": "^6.0.0",
+    "parse5-utils": "^2.0.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
