--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "main": "node main.js"
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
