Add options to save files in same folder and use slug as filename

--- a/config.js.template
+++ b/config.js.template
@@ -1,4 +1,5 @@
 const host = "https://demo.wp-api.org";
+
 const postParamsToBeDeleted = [];
 
 const teaserImageSettings = {
@@ -6,5 +7,14 @@ const teaserImageSettings = {
   saveUrl: true,
 };
 
+const saveSettings = {
+  saveInSeparateFolders: false,
+  useGenericJsonFileName: false,
+};
 
-module.exports = { host, postParamsToBeDeleted, teaserImageSettings };
+module.exports = {
+  host,
+  postParamsToBeDeleted,
+  teaserImageSettings,
+  saveSettings,
+};
