--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "html-entities": "^1.3.1",
     "lodash": "^4.17.19",
     "parse5": "^6.0.0",
